src/chronos/ChronosParser.java
// $ANTLR 3.5 C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g 2013-07-07 14:30:10

  package chronos;
  import chronos.utils.error.IChronosErrorReporter;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class ChronosParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "APOSTROF", "BECOMES", 
		"BOOLEAN", "CHAR", "CHARACTER", "COLON", "COMMA", "COMMENT", "CONST", 
		"DIGIT", "DIV", "DO", "ELSE", "ENDDO", "ENDIF", "EQ", "FALSE", "GE", "GT", 
		"IDENTIFIER", "IDESTBLOCK", "IF", "INTEGER", "LCURLY", "LE", "LETTER", 
		"LOWER", "LPAREN", "LT", "MINUS", "MINUSU", "MOD", "MULT", "NEQ", "NOT", 
		"NUMBER", "OR", "PLUS", "PLUSU", "PRINT", "PROGRAM", "RCURLY", "READ", 
		"RPAREN", "SEMICOLON", "SINGLECHAR", "SYMBOL", "THEN", "TRUE", "UPPER", 
		"VAR", "VOID", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int APOSTROF=5;
	public static final int BECOMES=6;
	public static final int BOOLEAN=7;
	public static final int CHAR=8;
	public static final int CHARACTER=9;
	public static final int COLON=10;
	public static final int COMMA=11;
	public static final int COMMENT=12;
	public static final int CONST=13;
	public static final int DIGIT=14;
	public static final int DIV=15;
	public static final int DO=16;
	public static final int ELSE=17;
	public static final int ENDDO=18;
	public static final int ENDIF=19;
	public static final int EQ=20;
	public static final int FALSE=21;
	public static final int GE=22;
	public static final int GT=23;
	public static final int IDENTIFIER=24;
	public static final int IDESTBLOCK=25;
	public static final int IF=26;
	public static final int INTEGER=27;
	public static final int LCURLY=28;
	public static final int LE=29;
	public static final int LETTER=30;
	public static final int LOWER=31;
	public static final int LPAREN=32;
	public static final int LT=33;
	public static final int MINUS=34;
	public static final int MINUSU=35;
	public static final int MOD=36;
	public static final int MULT=37;
	public static final int NEQ=38;
	public static final int NOT=39;
	public static final int NUMBER=40;
	public static final int OR=41;
	public static final int PLUS=42;
	public static final int PLUSU=43;
	public static final int PRINT=44;
	public static final int PROGRAM=45;
	public static final int RCURLY=46;
	public static final int READ=47;
	public static final int RPAREN=48;
	public static final int SEMICOLON=49;
	public static final int SINGLECHAR=50;
	public static final int SYMBOL=51;
	public static final int THEN=52;
	public static final int TRUE=53;
	public static final int UPPER=54;
	public static final int VAR=55;
	public static final int VOID=56;
	public static final int WHILE=57;
	public static final int WS=58;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ChronosParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ChronosParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ChronosParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g"; }


	  
	    private IChronosErrorReporter errorReporter = null;
	    
	    public void setErrorReporter(IChronosErrorReporter errorReporter) {
	        this.errorReporter = errorReporter;
	    }
	    
	    @Override
	    public void displayRecognitionError(String[] tokenNames,
	                                        RecognitionException e) {
	        String hdr = getErrorHeader(e);
	        String msg = getErrorMessage(e, tokenNames);
	        if (errorReporter != null){
	            errorReporter.addError(hdr, msg);
	        } else {
	            System.err.print("NO-ERRORREPORTER: ");
	            super.displayRecognitionError(tokenNames, e);
	        }
	    }
	    


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:113:1: program : decl_stat_blocks EOF -> ^( PROGRAM decl_stat_blocks ) ;
	public final ChronosParser.program_return program() throws RecognitionException {
		ChronosParser.program_return retval = new ChronosParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope decl_stat_blocks1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_decl_stat_blocks=new RewriteRuleSubtreeStream(adaptor,"rule decl_stat_blocks");

		try {
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:114:5: ( decl_stat_blocks EOF -> ^( PROGRAM decl_stat_blocks ) )
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:114:9: decl_stat_blocks EOF
			{
			pushFollow(FOLLOW_decl_stat_blocks_in_program805);
			decl_stat_blocks1=decl_stat_blocks();
			state._fsp--;

			stream_decl_stat_blocks.add(decl_stat_blocks1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program807);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: decl_stat_blocks
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 115:13: -> ^( PROGRAM decl_stat_blocks )
			{
				// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:115:15: ^( PROGRAM decl_stat_blocks )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				adaptor.addChild(root_1, stream_decl_stat_blocks.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class decl_stat_blocks_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "decl_stat_blocks"
	// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:118:1: decl_stat_blocks : ( ( declaration SEMICOLON !)* expression SEMICOLON !)+ ;
	public final ChronosParser.decl_stat_blocks_return decl_stat_blocks() throws RecognitionException {
		ChronosParser.decl_stat_blocks_return retval = new ChronosParser.decl_stat_blocks_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SEMICOLON4=null;
		Token SEMICOLON6=null;
		ParserRuleReturnScope declaration3 =null;
		ParserRuleReturnScope expression5 =null;

		Object SEMICOLON4_tree=null;
		Object SEMICOLON6_tree=null;

		try {
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:119:5: ( ( ( declaration SEMICOLON !)* expression SEMICOLON !)+ )
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:119:9: ( ( declaration SEMICOLON !)* expression SEMICOLON !)+
			{
			root_0 = (Object)adaptor.nil();


			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:119:9: ( ( declaration SEMICOLON !)* expression SEMICOLON !)+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==CHARACTER||LA2_0==CONST||LA2_0==FALSE||LA2_0==IDENTIFIER||LA2_0==IF||LA2_0==LCURLY||LA2_0==LPAREN||LA2_0==MINUS||(LA2_0 >= NOT && LA2_0 <= NUMBER)||LA2_0==PLUS||LA2_0==PRINT||LA2_0==READ||LA2_0==TRUE||LA2_0==VAR||LA2_0==WHILE) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:119:10: ( declaration SEMICOLON !)* expression SEMICOLON !
					{
					// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:119:10: ( declaration SEMICOLON !)*
					loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( (LA1_0==CONST||LA1_0==VAR) ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:119:11: declaration SEMICOLON !
							{
							pushFollow(FOLLOW_declaration_in_decl_stat_blocks847);
							declaration3=declaration();
							state._fsp--;

							adaptor.addChild(root_0, declaration3.getTree());

							SEMICOLON4=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_decl_stat_blocks849); 
							}
							break;

						default :
							break loop1;
						}
					}

					pushFollow(FOLLOW_expression_in_decl_stat_blocks854);
					expression5=expression();
					state._fsp--;

					adaptor.addChild(root_0, expression5.getTree());

					SEMICOLON6=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_decl_stat_blocks856); 
					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decl_stat_blocks"


	public static class indent_decl_stat_blocks_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "indent_decl_stat_blocks"
	// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:122:1: indent_decl_stat_blocks : LCURLY decl_stat_blocks RCURLY -> ^( IDESTBLOCK decl_stat_blocks ) ;
	public final ChronosParser.indent_decl_stat_blocks_return indent_decl_stat_blocks() throws RecognitionException {
		ChronosParser.indent_decl_stat_blocks_return retval = new ChronosParser.indent_decl_stat_blocks_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token LCURLY7=null;
		Token RCURLY9=null;
		ParserRuleReturnScope decl_stat_blocks8 =null;

		Object LCURLY7_tree=null;
		Object RCURLY9_tree=null;
		RewriteRuleTokenStream stream_LCURLY=new RewriteRuleTokenStream(adaptor,"token LCURLY");
		RewriteRuleTokenStream stream_RCURLY=new RewriteRuleTokenStream(adaptor,"token RCURLY");
		RewriteRuleSubtreeStream stream_decl_stat_blocks=new RewriteRuleSubtreeStream(adaptor,"rule decl_stat_blocks");

		try {
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:123:5: ( LCURLY decl_stat_blocks RCURLY -> ^( IDESTBLOCK decl_stat_blocks ) )
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:123:9: LCURLY decl_stat_blocks RCURLY
			{
			LCURLY7=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_indent_decl_stat_blocks878);  
			stream_LCURLY.add(LCURLY7);

			pushFollow(FOLLOW_decl_stat_blocks_in_indent_decl_stat_blocks880);
			decl_stat_blocks8=decl_stat_blocks();
			state._fsp--;

			stream_decl_stat_blocks.add(decl_stat_blocks8.getTree());
			RCURLY9=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_indent_decl_stat_blocks882);  
			stream_RCURLY.add(RCURLY9);

			// AST REWRITE
			// elements: decl_stat_blocks
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 124:11: -> ^( IDESTBLOCK decl_stat_blocks )
			{
				// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:124:14: ^( IDESTBLOCK decl_stat_blocks )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IDESTBLOCK, "IDESTBLOCK"), root_1);
				adaptor.addChild(root_1, stream_decl_stat_blocks.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "indent_decl_stat_blocks"


	public static class declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:127:1: declaration : ( constant_declaration | variable_declaration );
	public final ChronosParser.declaration_return declaration() throws RecognitionException {
		ChronosParser.declaration_return retval = new ChronosParser.declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope constant_declaration10 =null;
		ParserRuleReturnScope variable_declaration11 =null;


		try {
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:128:5: ( constant_declaration | variable_declaration )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==CONST) ) {
				alt3=1;
			}
			else if ( (LA3_0==VAR) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:128:9: constant_declaration
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_constant_declaration_in_declaration919);
					constant_declaration10=constant_declaration();
					state._fsp--;

					adaptor.addChild(root_0, constant_declaration10.getTree());

					}
					break;
				case 2 :
					// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:129:9: variable_declaration
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_variable_declaration_in_declaration929);
					variable_declaration11=variable_declaration();
					state._fsp--;

					adaptor.addChild(root_0, variable_declaration11.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class constant_declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "constant_declaration"
	// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:132:1: constant_declaration : CONST ^ IDENTIFIER BECOMES ! expression ;
	public final ChronosParser.constant_declaration_return constant_declaration() throws RecognitionException {
		ChronosParser.constant_declaration_return retval = new ChronosParser.constant_declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token CONST12=null;
		Token IDENTIFIER13=null;
		Token BECOMES14=null;
		ParserRuleReturnScope expression15 =null;

		Object CONST12_tree=null;
		Object IDENTIFIER13_tree=null;
		Object BECOMES14_tree=null;

		try {
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:133:5: ( CONST ^ IDENTIFIER BECOMES ! expression )
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:133:9: CONST ^ IDENTIFIER BECOMES ! expression
			{
			root_0 = (Object)adaptor.nil();


			CONST12=(Token)match(input,CONST,FOLLOW_CONST_in_constant_declaration948); 
			CONST12_tree = (Object)adaptor.create(CONST12);
			root_0 = (Object)adaptor.becomeRoot(CONST12_tree, root_0);

			IDENTIFIER13=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_constant_declaration951); 
			IDENTIFIER13_tree = (Object)adaptor.create(IDENTIFIER13);
			adaptor.addChild(root_0, IDENTIFIER13_tree);

			BECOMES14=(Token)match(input,BECOMES,FOLLOW_BECOMES_in_constant_declaration953); 
			pushFollow(FOLLOW_expression_in_constant_declaration956);
			expression15=expression();
			state._fsp--;

			adaptor.addChild(root_0, expression15.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "constant_declaration"


	public static class variable_declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "variable_declaration"
	// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:136:1: variable_declaration : VAR ^ IDENTIFIER COLON ! type ;
	public final ChronosParser.variable_declaration_return variable_declaration() throws RecognitionException {
		ChronosParser.variable_declaration_return retval = new ChronosParser.variable_declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token VAR16=null;
		Token IDENTIFIER17=null;
		Token COLON18=null;
		ParserRuleReturnScope type19 =null;

		Object VAR16_tree=null;
		Object IDENTIFIER17_tree=null;
		Object COLON18_tree=null;

		try {
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:137:5: ( VAR ^ IDENTIFIER COLON ! type )
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:137:9: VAR ^ IDENTIFIER COLON ! type
			{
			root_0 = (Object)adaptor.nil();


			VAR16=(Token)match(input,VAR,FOLLOW_VAR_in_variable_declaration977); 
			VAR16_tree = (Object)adaptor.create(VAR16);
			root_0 = (Object)adaptor.becomeRoot(VAR16_tree, root_0);

			IDENTIFIER17=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_variable_declaration980); 
			IDENTIFIER17_tree = (Object)adaptor.create(IDENTIFIER17);
			adaptor.addChild(root_0, IDENTIFIER17_tree);

			COLON18=(Token)match(input,COLON,FOLLOW_COLON_in_variable_declaration982); 
			pushFollow(FOLLOW_type_in_variable_declaration985);
			type19=type();
			state._fsp--;

			adaptor.addChild(root_0, type19.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "variable_declaration"


	public static class type_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type"
	// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:140:1: type : ( INTEGER | CHAR | BOOLEAN );
	public final ChronosParser.type_return type() throws RecognitionException {
		ChronosParser.type_return retval = new ChronosParser.type_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set20=null;

		Object set20_tree=null;

		try {
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:141:5: ( INTEGER | CHAR | BOOLEAN )
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:
			{
			root_0 = (Object)adaptor.nil();


			set20=input.LT(1);
			if ( (input.LA(1) >= BOOLEAN && input.LA(1) <= CHAR)||input.LA(1)==INTEGER ) {
				input.consume();
				adaptor.addChild(root_0, (Object)adaptor.create(set20));
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type"


	public static class expression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:146:1: expression : ( assign_statement | while_statement );
	public final ChronosParser.expression_return expression() throws RecognitionException {
		ChronosParser.expression_return retval = new ChronosParser.expression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope assign_statement21 =null;
		ParserRuleReturnScope while_statement22 =null;


		try {
			// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:147:5: ( assign_statement | while_statement )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==CHARACTER||LA4_0==FALSE||LA4_0==IDENTIFIER||LA4_0==IF||LA4_0==LCURLY||LA4_0==LPAREN||LA4_0==MINUS||(LA4_0 >= NOT && LA4_0 <= NUMBER)||LA4_0==PLUS||LA4_0==PRINT||LA4_0==READ||LA4_0==TRUE) ) {
				alt4=1;
			}
			else if ( (LA4_0==WHILE) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:147:9: assign_statement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_assign_statement_in_expression1048);
					assign_statement21=assign_statement();
					state._fsp--;

					adaptor.addChild(root_0, assign_statement21.getTree());

					}
					break;
				case 2 :
					// C:\\Users\\Herman\\Development\\Java\\eclipse_workspace\\VertalerbouwEindopdracht\\src\\chronos\\Chronos.g:148:9: while_statement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_while_statement_in_expression1058);
					while_statement22=while_statement();
					state._fsp--;
